fixed spacing issues

--- a/src/styling/Aboutme.css
+++ b/src/styling/Aboutme.css
@@ -1,9 +1,9 @@
 /* Web (Desktop) */
 .aboutme-section {
   position: relative;
-  min-height: 100vh;
   overflow-x: hidden;
   color: white;
+  height: auto;
 }
 
 .background-image-wrapper {
@@ -22,11 +22,11 @@
   background: rgba(0, 0, 0, 0.5);
   padding: 4rem 2rem 5rem;
   border-radius: 1rem;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
+  height: auto;
 }
 
 .falling-header {
